# symgrep

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build-artifacts.yml  ci.yml  release.yml
src/: engine.rs  main.rs
tests/: cli.rs
tests/fixtures/: Makefile  libtest.c  main  main.c
