[package]
name = "symgrep"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/camjjack/symgrep"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
clap_derive = "4.5.55"
env_logger = "0.11.9"
goblin = "0.10.5"
ignore = "0.4.25"
log = "0.4.29"
memmap2 = "0.9.10"
rayon = "1.11.0"
regex = "1.12.3"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
